# ghostfolio-agent

./: .dockerignore  .env.example  .gitignore  AgentForge_PreSearch.md  Dockerfile  Dockerfile.chat  LICENSE  README.md  chainlit_app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.chainlit/: config.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: auth.py  config.py  main.py
app/agent/: agent.py  models.py  prompts.py
app/agent/skills/: __init__.py
app/agent/tools/: __init__.py  add_trade.py  dividend_history.py  holding_detail.py  market_sentiment.py  portfolio_performance.py  portfolio_summary.py  sector_performance.py  stock_price.py  stock_trend.py  stock_volume.py  symbol_search.py  transactions.py
app/clients/: ghostfolio.py
app/memory/: __init__.py  memory_store.py
app/models/: schemas.py
app/routes/: agent_routes.py  chat_routes.py  health.py
app/tracing/: cost_tracker.py  feedback_store.py  setup.py
app/verification/: disclaimer_injection.py  hallucination_detection.py  numerical_consistency.py  risk_threshold.py
docs/: architecture.md  cost_analysis.md
scripts/: seed_ghostfolio.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  auth.js  chat.js  models.js
tests/: conftest.py  test_ghostfolio_client.py  test_market_tools.py  test_memory.py  test_skills.py  test_tools.py
tests/evals/: conftest.py  evaluator.py  golden_data.yaml  llm_judge.py  rubrics.yaml  scenarios.yaml  test_golden_sets.py  test_llm_judge.py  test_scenarios.py
